@@ -168,6 +168,11 @@ AUTO_DEPENDENCIES = @AUTO_DEPENDENCIES@
 USE_OBJC_EXCEPTIONS = @USE_OBJC_EXCEPTIONS@
 
 #
+# Whether we are using the ObjC garbage cllection library.
+#
+USE_OBJC_GC = @USE_OBJC_GC@
+
+#
 # Whether the compiler is GCC with precompiled header support
 #
 GCC_WITH_PRECOMPILED_HEADERS = @GCC_WITH_PRECOMPILED_HEADERS@
